--- a/docs/src/style.css
+++ b/docs/src/style.css
@@ -24,6 +24,20 @@ body {
   background-position: center calc(100% - 18px);
 }
 
+.bg-analytics {
+  background-image: url('assets/bg-analytics.svg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center 250px;
+}
+
+.bg-footer {
+  background-image: url('assets/bg-footer.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center -150px;
+}
+
 /* Logo slider (gslide) */
 .glide__slide{
   border-radius: 8px;
@@ -67,13 +81,27 @@ body {
 }
 
 
-/* Gradients */
-.bgtb-white-pure-moon {
-  background-image: linear-gradient(#fff, #f5f5fa);
+.control-label {
+  display: inline-block;
+  margin-bottom: 4px;
+  font-weight: bold;
+  text-transform: uppercase;
 }
-.bgtb-moon-white-pure {
-  background-image: linear-gradient(#f5f5fa, #fff);
+
+.form-control {
+  border-radius: 4px;
+  border: solid 1px #DBDBE7;
+  padding: 8px 16px;
+  width: 100%;
+  margin-bottom: 8px;
 }
+
+.elevation {
+  background-image: linear-gradient(0deg, #F5F5FA 0%, #FFFFFF 100%);
+  box-shadow: 0 2px 4px 0 rgba(93,100,148,0.20), 0 5px 15px 0 rgba(37,44,97,0.15);
+  border-radius: 5px;
+}
+
 
 /* Global styles */
 a,
